--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "search & hire trendy influencer",
   "main": "",
   "scripts": {
-    "webpack": "./node_modules/.bin/webpack --watch",
+    "build": "webpack",
+    "build:dev": "npm run build -- --mode=development --watch",
     "test": "DATABASE_URL=postgres://postgres@localhost/capstone_db ",
     "test:watch": "",
-    "start:dev": "npm run webpack & nodemon backend/server.js --ignore frontend/ ",
+    "start:dev": "npm run build:dev & nodemon backend/server.js --ignore frontend/ ",
     "start": "node backend/server.js",
     "postinstall": "npm run webpack"
   },
