--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ LINKEDIN_STATE=
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
 LINKEDIN_REDIRECT_URI=http://localhost:3000/auth/linkedin/callback
+FB_APP_ID = 
+FB_APP_VERSION = 
+FB_REDIRECT_URI=http://localhost:3000/auth/facebook/callback
