--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "react": "^16.10.2",
