--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,6 @@ LINKEDIN_CLIENT_SECRET=
 LINKEDIN_REDIRECT_URI=http://localhost:3000/auth/linkedin/callback
 FB_APP_ID = 
 FB_APP_VERSION = 
-FB_REDIRECT_URI=http://localhost:3000/auth/facebook/callback
+FB_REDIRECT_URI = http://localhost:3000/auth/facebook/callback
+IG_APP_ID = 
+IG_REDIRECT_URI = http://localhost:3000/auth/instagram/callback
