--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^7.12.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-facebook-login": "^4.1.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
