--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.19.6"
+    "sequelize": "^5.19.6",
+    "styled-components": "^4.4.1"
   }
 }
