--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
